apps/obsidian/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian
  annotations:
    cert-manager.io/cluster-issuer: ssl-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - obsidian.galactica.host
      secretName: obsidian-tls-certificate
  rules:
    - host: obsidian.galactica.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-couchdb
                port:
                  number: 5984
